Fixed speaker names breaking on small-screen devices

--- a/app/styles/_speakers.scss
+++ b/app/styles/_speakers.scss
@@ -11,12 +11,12 @@
     img {
         width: 64px;
         border-radius: 3px;
-        margin-right: 0.5em;
+        margin: 0.3em;
+        float: left;
     }
 
     .speaker {
         border-bottom: 1px solid #ddd;
-        padding: 0.9em 1em;
         list-style-type: none;
     }
 
@@ -24,11 +24,14 @@
         color: #000;
         font-weight: bold;
         text-decoration: none;
-        line-height: 1.5em;
+        //line-height: 1.5em;
+        display: inline-block;
+        margin-top: 5px;
     }
 
     .meta {
         font-size: 0.9em;
+        //line-height: 1.5em;
     }
 
     .company {
@@ -37,6 +40,9 @@
     }
 
     .talks {
+        clear: both;
+        margin-left: 95px;
+        padding: 0;
 
         a {
             text-decoration: none;
